--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngrx/effects": "^14.1.0",
+    "@ngrx/store": "^14.1.0",
+    "@ngrx/store-devtools": "^14.1.0",
     "rxjs": "~7.5.0",
     "tailwindcss": "^3.2.4",
     "tslib": "^2.3.0",
@@ -29,6 +32,7 @@
     "@angular-devkit/build-angular": "^14.1.2",
     "@angular/cli": "~14.1.2",
     "@angular/compiler-cli": "^14.1.0",
+    "@ngrx/schematics": "^14.1.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
